src/main/java/org/example/errors/NoDataInFileException.java
package org.example.errors;

public class NoDataInFileException extends RuntimeException {
}
